{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 6,
  "lineage": "b4ae7386-1fe0-2974-87d3-513116100b30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054037120863:security-group/sg-0e74036696c51a489",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0e74036696c51a489",
            "ingress": [],
            "name": "yash-SG",
            "name_prefix": "",
            "owner_id": "054037120863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yash-SG"
            },
            "tags_all": {
              "Name": "yash-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c070b795bef236d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-Test-VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-Test-VPC-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054037120863:vpc/vpc-05c070b795bef236d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0677374d798a8ccd0",
            "default_route_table_id": "rtb-0aad8844e4735802f",
            "default_security_group_id": "sg-0f4418c44ea678d70",
            "dhcp_options_id": "dopt-0bd38cab299feaf61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c070b795bef236d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aad8844e4735802f",
            "owner_id": "054037120863",
            "tags": {
              "Name": "my-test-vpc-terra"
            },
            "tags_all": {
              "Name": "my-test-vpc-terra"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054037120863:security-group-rule/sgr-0a42e5e92dc8b9886",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a42e5e92dc8b9886",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e74036696c51a489",
            "security_group_rule_id": "sgr-0a42e5e92dc8b9886",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.My-Test-VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054037120863:security-group-rule/sgr-053fc599719b6393b",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-053fc599719b6393b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e74036696c51a489",
            "security_group_rule_id": "sgr-053fc599719b6393b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.My-Test-VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054037120863:security-group-rule/sgr-0b726c232c6d01f77",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b726c232c6d01f77",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e74036696c51a489",
            "security_group_rule_id": "sgr-0b726c232c6d01f77",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.My-Test-VPC-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}